# LangGraph_Full_Course

./: .env.example  README.md  pyproject.toml  requirements.txt
Notebooks/: 10_Generator_Evaluator.ipynb  11_Memory.ipynb  12_HumanInLoop.ipynb  1_First_Graph.ipynb  2_Pydantic.ipynb  3_messages.ipynb  4_Prompts&Chains.ipynb  5_Tools&Binding.ipynb  6_ReAct.ipynb  7_Parralelization.ipynb  8_Router.ipynb  9_Orchestrator_Worker.ipynb
Notes/: readmenot.md
