[project]
name = "langgraph-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.4.0",
    "duckduckgo-search>=8.1.1",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.12",
    "langchain-openai>=1.1.9",
    "langgraph>=1.0.8",
    "pymupdf>=1.27.1",
    "wikipedia>=1.4.0",
]
